--- a/proyectofinal/proyectofinal.csproj
+++ b/proyectofinal/proyectofinal.csproj
@@ -60,6 +60,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="mibd\Asistente.cs" />
+    <Compile Include="mibd\CuentaProveedor.cs" />
+    <Compile Include="mibd\Factura.cs" />
+    <Compile Include="mibd\Proveedor.cs" />
+    <Compile Include="mibd\Servicio.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -72,6 +77,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="nuevaVentana.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="mibd\classejemplo.cs" />
@@ -81,6 +90,9 @@
       <DependentUpon>201511131626404_classejemplo.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="nuevaVentana.xaml.cs">
+      <DependentUpon>nuevaVentana.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
